--- a/design-tokens-master.css
+++ b/design-tokens-master.css
@@ -176,8 +176,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #FFB819;
-  --color-interactive: #006141;
-  --color-inverted: #FFB819;
+  --color-interactive: #FFB819;
+  --color-inverted: #006141;
 }
 
 /* ============================================
@@ -239,8 +239,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #E87722;
-  --color-interactive: #003865;
-  --color-inverted: #E87722;
+  --color-interactive: #E87722;
+  --color-inverted: #003865;
 }
 
 /* ============================================
@@ -302,8 +302,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #B4A269;
-  --color-interactive: #AB0033;
-  --color-inverted: #B4A269;
+  --color-interactive: #B4A269;
+  --color-inverted: #AB0033;
 }
 
 /* ============================================
@@ -365,8 +365,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #CCFF00;
-  --color-interactive: #4C65F0;
-  --color-inverted: #CCFF00;
+  --color-interactive: #CCFF00;
+  --color-inverted: #4C65F0;
 }
 
 /* ============================================
@@ -428,8 +428,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #79BC43;
-  --color-interactive: #266092;
-  --color-inverted: #79BC43;
+  --color-interactive: #79BC43;
+  --color-inverted: #266092;
 }
 
 /* ============================================
@@ -491,8 +491,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #B4A269;
-  --color-interactive: #00416B;
-  --color-inverted: #B4A269;
+  --color-interactive: #B4A269;
+  --color-inverted: #00416B;
 }
 
 /* ============================================
@@ -554,8 +554,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #C79D58;
-  --color-interactive: #232F79;
-  --color-inverted: #E0BE85;
+  --color-interactive: #E0BE85;
+  --color-inverted: #232F79;
 }
 
 /* ============================================
@@ -617,8 +617,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #7CE0D3;
-  --color-interactive: #0033A0;
-  --color-inverted: #7CE0D3;
+  --color-interactive: #7CE0D3;
+  --color-inverted: #0033A0;
 }
 
 /* ============================================
@@ -680,8 +680,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #C04D38;
-  --color-interactive: #20604E;
-  --color-inverted: #E6B93F;
+  --color-interactive: #E6B93F;
+  --color-inverted: #20604E;
 }
 
 /* ============================================
@@ -743,8 +743,8 @@
   --org-primary-button-text: #000000;
   --org-secondary-button-text: #FFFFFF;
   --org-tertiary-button-text: #FFFFFF;
-  --color-interactive: #266092;
-  --color-inverted: #79BC43;
+  --color-interactive: #79BC43;
+  --color-inverted: #266092;
 }
 
 /* SYNC:END */
